--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
 html {
-  background-color: lightblue;
+  background-image: url("../src/assets/Images/3.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  background-color: rgba(255, 255, 255, 0.877);
 }
